fixed header thats shifted

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -13,4 +13,5 @@ $weightVeryBold: 700;
 
 body {
     font-family: $font;
+    background-color: #fff;
 }
