--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,9 +11,10 @@
 header {
     .nav-bar {
         @include flexCenter($justify-content: space-between);
-        padding: 2rem;
-        margin: 0 1rem;
+        padding: 2rem 2rem;
         position: absolute;
+        right: 0;
+        top: 0;
         width: 100%;
         z-index: 10;
 
@@ -80,7 +81,6 @@ header {
         height: 97vh;
         @include flexCenter();
         margin: 0 2rem;
-        width: 100%;
 
         &__img {
             width: 65%;
@@ -91,11 +91,11 @@ header {
             flex-direction: column;
             width: 100%;
             max-width: 50rem;
-            gap: 1rem;
 
             h1 {
                 font-size: 3.2rem;
                 font-weight: $weightVeryBold;
+                line-height: 1.2;
 
                 span {
                     color: $primaryColor;
@@ -104,6 +104,35 @@ header {
 
             h2 {
                 font-weight: $weightVeryBold;
+            }
+
+            p {
+                color: #706f7b;
+                margin: 1rem 0;
+            }
+
+            &__buttons {
+                display: flex;
+                gap: 1rem;
+                padding-top: 1.8rem;
+
+                a {
+                    padding: 1rem 3rem;
+                    text-decoration: none;
+                    color: white;
+                    font-weight: $weightVeryBold;
+                    border-radius: .3rem;
+
+                    &:first-child {
+                        background-color: $primaryColor;
+                        box-shadow: 0 10px 15px 0 rgba(255,83,48,.35);
+                    }
+
+                    &:last-child {
+                        background-color: black;
+                    }
+                }
+
             }
         }
     }
